# infinite

./: CMakeLists.txt  README.md
src/: Board.c  Board.h  Position.c  Position.h  Random.c  Random.h  Types.h  Util.c  Util.h  Zobrist.c  Zobrist.h  main.c
